--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 			it radiates and permeates and hesitates<br>
 			from center consule it operates<br>
 			surveilling all i do<br>
-			<regressing>
+			<!--<regressing>
 			_,--,            _
 	__,-'____| ___      /' |
 /'   `\,--,/'   `\  /'   |
 (       )  (       )'
 \_   _/'  `\_   _/   pb
-	"""        """ </regressing>
+	"""        """ </regressing>-->
 			do you know her?<br>
 			yeah he said<br>
 			i do he said<br>
@@ -58,7 +58,7 @@
 			lol<br>
 			fly me to the brilliant Azure Sky<br>
 			where two clouds hover<br>
-<regressing>
+<!--<regressing>
 			┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈
 ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈
 ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈
@@ -209,7 +209,7 @@
 ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈
 ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈
 ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈
-</regressing>
+</regressing>-->
 			indefinitely<br>
 			i never actually read <br>
 			The Fault In Our Stars to completion<br>
@@ -254,7 +254,7 @@
 			she turns and disapeers into the store<br>
 			we're 12 in tysons corner<br>
 			one of the last thriving malls<br>
-			<regressing>
+			<!--<regressing>
 			_  ___
 		  )) )L
 		 (( ((
@@ -327,7 +327,7 @@ dP
 ::...::
 :::::::   in empty forests
 :::::::
-</regressing>
+</regressing>-->
 
 
 	    this is back when <br>
@@ -365,7 +365,7 @@ dP
 			happened in 2014,<br>
 			right?<br>
 			do you remember when things went viral<br>
-	<regressing>		_                                                 _
+	<!--<regressing>		_                                                 _
 (_)                                               | |
 ____  ____ _  ____ ____   ____     ____  ____ ____ ____   _ | | ____
 / _  |/ ___| |/ _  |  _ \ / _  |   / _  |/ ___/ _  |  _ \ / || |/ _  )
@@ -376,7 +376,7 @@ ___|_|_|  _|_|\__|_|_| |_|\_||_|   \_|| |_|   __||_|_| |_|\____|\____)
 | | |/ ___| | / | |  _ \ / _  |   / _  |   / || |/ _ \|  _ \| | | |  _)
 | | ( (___| |< (| | | | ( ( | |  ( ( | |  ( (_| | |_| | | | | |_| | |__
 |_|_|\____|_| \_|_|_| |_|\_|| |   \_||_|   \____|\___/|_| |_|\____|\___)
-					 (_____|                                         </regressing>
+					 (_____|                                         </regressing>-->
 			before things were viral?<br>
 			when everyone knew about whatever thing it was that week<br>
 			now the cycle churns even just if not more rapidly <br>
@@ -411,7 +411,7 @@ ___|_|_|  _|_|\__|_|_| |_|\_||_|   \_|| |_|   __||_|_| |_|\____|\____)
 			yeah, but we know the ball exists and we know<br>
 			that at one point there was a reality outside of it<br>
 			he said<br>
-			<regressing>
+			<!--<regressing>
 			',:'/¯/`:,
 /:/_/::::/';'
 /:'     '`:/::;‘
@@ -671,7 +671,7 @@ i´        ¯          'i/ '
  `;         ,/::::::::/'
 ,·'         '¯ '`*^;:/‘
 ';                 ,'/'
-'`*^~·–-·~^*'´‘         </regressing>
+'`*^~·–-·~^*'´‘         </regressing>-->
 
 			the ones who came after us exist entirely within it<br>
 			for us it was more of a voluntary descent<br>
@@ -749,13 +749,13 @@ i´        ¯          'i/ '
 			stop saying<br>
 			i want to dye<br>
 			it mint green <br>
-			<regressing>
+			<!--<regressing>
 _
 _ _ ___ _ _    ___ _ _ _ _ ___    ___ ___ ___    ___ ___    ___ ___ ___ ___ _ _|_|___ ___
 | | | . | | |  | . | | | | |_ -|  | .'|  _| -_|  |_ -| . |  | .'|   |   | . | | | |   | . |
 |_  |___|___|  |_  |___|_  |___|  |__,|_| |___|  |___|___|  |__,|_|_|_|_|___|_  |_|_|_|_  |
 |___|          |___|   |___|                                                |___|     |___|
-</regressing>
+</regressing>-->
 			i want to be<br>
 			s o go ddam n<br>
 			ce rul e an<br>
@@ -1336,7 +1336,7 @@ _ _ ___ _ _    ___ _ _ _ _ ___    ___ ___ ___    ___ ___    ___ ___ ___ ___ _ _|
 			fall through<br>
 			fall through<br>
 
-  		</p>
+  		</p><!--
 .-.  .-.,---.  ,-.    ,--,  .---.           ,---.
 | |/\| || .-'  | |  .' .') / .-. ) |\    /| | .-'
 | /  \ || `-.  | |  |  |(_)| | |(_)|(\  / | | `-.
@@ -1351,6 +1351,7 @@ _ _ ___ _ _    ___ _ _ _ _ ___    ___ ___ ___    ___ ___    ___ ___ ___ ___ _ _|
    | |   \ `-' /     | |   | | |)||  `--. \ `-' /   | |   | | |)||  `--.| |\ \   ( `-'  ) | | /(|`-' /|  `--.
    `-'    )---'      `-'   /(  (_)/( __.'  )---'    `-'   /(  (_)/( __.'|_| \)\   `----'  `-'(__)`--' /( __.'
          (_)              (__)   (__)     (_)            (__)   (__)        (__)                     (__)
+			 -->
 	</center>
 </body>
 <footer>
