--- a/index.html
+++ b/index.html
@@ -43,9 +43,13 @@
 			her voice fades in to ukulele stock music<br>
 			does it stick to your hands or get caught in the riptide?<br>
 			lately i've been lonely<br>
-			but aparently everyone else is too so<br>
-			that makes it fine i guess<br>
-			ed that by now we would have figured more of this stuff<br>
+			but aparently everyone else is too soo<br>
+			that makes it fine <br>
+			i guess<br>
+			ed that by now <br>
+			we would have <br>
+			figured more of<br>
+			this stuff<br>
 			out but we really haven't it seems to have only<br>
 			gotten worse<br>
 			lol<br>
@@ -213,11 +217,10 @@
 			gnst<br>
 			okay?<br>
 			okay.<br>
-			im so tired all the time<br>
 			<!--The cheesecake factory-->
 			what ever happened to john green?<br>
 			what ever happened to mint green?<br>
-			it was never just a color<br>
+			it wasn't just a color<br>
 			it smybolized something else<br>
 			entirely <br>
 			abstract<br>
@@ -229,37 +232,38 @@
 			it's like one day they just decided to manufacture every product<br>
 			in this one color<br>
 			that of course existed before<br>
-			but now it was everywhere<br>
-			and so it became universal<br>
+			suddenly it was ubiquitous<br>
 			Whats up Quaranteens?!<br>
 			<!--imagine being a getty image-->
 			I've been a bad girl<br>
-			wash my mouth out<br>
-			with Bath and Body Works soap<br>
+			so naughty for you<br>
+			tube my esophagus is your tube<br>
+			stick ur fingers down<br>
+			and wash my mouth out<br>
+			with soap from Bath & Body Works<br>
 			Here, if you buy three <br>
 			and I buy three <br>
 			we can use the<br>
-			buy three <br>
-			get three <br>
-			free deal<br>
+			BUY THREE <br>
+			GET THREE <br>
+			FREE deal<br>
 			I stare back in blank giddy<br>
 			<!--Try to use the words flotsum and jetsum in here-->
 			she turns and disapeers into the store<br>
-			we're 12 in tysons corner<br>
-			one of the last thriving malls<br>
-	    this is back when <br>
-			b&bw was across from the annie's pretzel kiosk <br>
-			on the first floor<br>
-			before they relocated<br>
-			their old store felt bigger<br>
+			before me lay<br>
+			a sensory exploration<br>
+			the old B&BW store felt bigger<br>
 			since i would roam around there for decades<br>
 			pacing, unscrewing bottles, and sniffing their contents<br>
 			I had to find the three products <br>
 			and i wouldnt know which three were my favorite until i had sniffed<br>
-			every single bottle in that store<br>
+			every<br>
+			single<br>
+			bottle<br>
+			in the store<br>
 			are you ready to check out?<br>
-			never<br>
-			and it would be heaven for my nose<br>
+			trick question<br>
+			i'd never be<br>
 			oh wow<br>
 			oh no<br>
 			<!--This is a comment. I literally wanted to be a millenial so bad why did i want to be a millenial? so badly and to participate in the 90s kid nostalgia i had no actual memory of-->
@@ -267,11 +271,12 @@
 			carnal chainsmoking<br>
 			its really bad isn't it?<br>
 			yeah...<br>
-			listen, things have gotten worse<br>
+			listen, babe,<br>
+			things have gotten a lot worse<br>
 			<!--This is a comment. Comments are not displayed in the browser-->
 			<!--This is a comment. Comments are not displayed in the browser-->
-			on the listerine scene <br>
-			squeeky clean<br>
+			here on the squeeky clean <br>
+			listerine scene <br>
 			quarantine<br>
 			chewing<br>
 			<!--the collapse of sexy and cute-->
@@ -282,28 +287,23 @@
 			happened in 2014,<br>
 			right?<br>
 			do you remember when things went viral<br>
-	<!--<regressing>		_                                                 _
-(_)                                               | |
-____  ____ _  ____ ____   ____     ____  ____ ____ ____   _ | | ____
-/ _  |/ ___| |/ _  |  _ \ / _  |   / _  |/ ___/ _  |  _ \ / || |/ _  )
-( ( | | |   | ( ( | | | | ( ( | |  ( ( | | |  ( ( | | | | ( (_| ( (/ /
-___|_|_|  _|_|\__|_|_| |_|\_||_|   \_|| |_|   __||_|_| |_|\____|\____)
-| (_)     | |   (_)                (_____|    | |                  _
-| |_  ____| |  _ _ ____   ____     ____     _ | | ___  ____  _   _| |_
-| | |/ ___| | / | |  _ \ / _  |   / _  |   / || |/ _ \|  _ \| | | |  _)
-| | ( (___| |< (| | | | ( ( | |  ( ( | |  ( (_| | |_| | | | | |_| | |__
-|_|_|\____|_| \_|_|_| |_|\_|| |   \_||_|   \____|\___/|_| |_|\____|\___)
-					 (_____|                                         </regressing>-->
 			before things were viral?<br>
 			when everyone knew about whatever thing it was that week<br>
-			now the cycle churns even just if not more rapidly <br>
-			but within little bubbles<br>
+			now the cycle churns even more rapidly <br>
+			but inside little bubbles<br>
+			if a bath bomb explodes <br>
+			off camera<br>
+			did it even happen?<br>
+			do trees in empty forests<br>
+			fall on deaf ears<br>
 			numbers don't impress me<br>
 			views don't impress me<br>
-			exposure don't impress me<br>
+			exposure won't impress me<br>
 			do you remember when every youtuber was still on vine?<br>
 			when ariana grande licked that donut and it caused a big stir<br>
 		  mmmhmm<br>
+			do you remember when sexy and cute collapsed?<br>
+			This is Why I Left Buzzfeed<br>
 			aren't you on tumblr?<br>
 			start designing your blog<br>
 			you'll learn to code by accident!<br>
@@ -330,8 +330,11 @@ ___|_|_|  _|_|\__|_|_| |_|\_||_|   \_|| |_|   __||_|_| |_|\____|\____)
 			he said<br>
 			the ones who came after us exist entirely within it<br>
 			for us it was more of a voluntary descent<br>
-			or i don't know about it being voluntary, but we had more agency in the matter<br>
-			of setting boundries in our relationships with technology given that<br>
+			or i don't know about it <br>
+			being voluntary, but we certainly had <br>
+			more agency in the matter<br>
+			of setting boundries in our relationships with technology <br>
+			given that<br>
 			we saw with our own eyes the proliferation of smartphones<br>
 			and tablets and like the rise of social media that<br>
 			happened in middle school for us <br>
@@ -341,7 +344,6 @@ ___|_|_|  _|_|\__|_|_| |_|\_||_|   \_|| |_|   __||_|_| |_|\____|\____)
 			and it already was this way<br>
 			they are the ipad babies and they're gonna grow up<br>
 			Does that make sense?<br>
-
 			Does that make us responsible?<br>
 			responsible for what? i asked<br>
 			for telling them about the big blue ball insisde their bains?<br>
@@ -349,7 +351,6 @@ ___|_|_|  _|_|\__|_|_| |_|\_||_|   \_|| |_|   __||_|_| |_|\____|\____)
 			i think about a bottle of lotion<br>
 			that has sat on a dresser <br>
 			in an attic <br>
-			in kingston new york<br>
 			for three decades<br>
 			it's the flagship japanese cherry blossom scent<br>
 			the memory is the scent<br>
@@ -358,15 +359,17 @@ ___|_|_|  _|_|\__|_|_| |_|\_||_|   \_|| |_|   __||_|_| |_|\____|\____)
 			i mean like<br>
 			what do we even say?<br>
 			who else is gonna do it<br>
+			what is there to say?<br>
 			i'm scared<br>
 			asphyxiate me<br>
 			with rainbow chokers made of lace<br>
-			i'll spend my last breath inhaling<br>
+			inhale<br>
 			the cherry blossom lotion in the attic<br>
-			and the way it rot<br>
+			the way it rot<br>
 			so elegantely<br>
 			like a fine wine<br>
-			or kimchi or a moldy piece of wonderbread<br>
+			or kimchi or like a moldy piece of wonderbread<br>
+			or something<br>
 			trample me<br>
 			with white converse<br>
 			the big blue ball inside our brains<br>
@@ -374,16 +377,15 @@ ___|_|_|  _|_|\__|_|_| |_|\_||_|   \_|| |_|   __||_|_| |_|\____|\____)
 			big beautiful and bright<br>
 			inflated with infinite possibilities<br>
 			i want to touch it<br>
-			This is Why I Left Buzzfeed<br>
 			i want to squeeze it<br>
 			i reach out<br>
+			so desperately
+			i try to pop it<br>
 			but it burns<br>
 			tears well upon sight<br>
 			its just so bright<br>
 			light<br>
 			and #FFFervescent<br>
-			at your local abandoned mall<br>
-			you and your friends go to take picturres
 			so, to your original question<br>
 			the first year I remember is mint green twenty fourteen<br>
 			i remember a time and a place so far away,<br>
@@ -391,9 +393,9 @@ ___|_|_|  _|_|\__|_|_| |_|\_||_|   \_|| |_|   __||_|_| |_|\____|\____)
 			their yarn couldn’t span the cognitive distance<br>
 			between now and then<br>
 			i remember learning to love not to remember<br>
-			i remember downing in a sea of infinate potentiality<br>
+			i remember drowning in a sea of infinate potentiality<br>
 			and waking up in a bathtub of blue light<br>
-			reborn in a virtual reality<br>
+			reborn into a virtual reality<br>
 			where gravity and consequences don't exist<br>
 			where im as light as a feather<br>
 			and a feather is as light as me<br>
@@ -404,19 +406,15 @@ ___|_|_|  _|_|\__|_|_| |_|\_||_|   \_|| |_|   __||_|_| |_|\____|\____)
 			stop saying<br>
 			i want to dye<br>
 			it mint green <br>
-			<!--<regressing>
-_
-_ _ ___ _ _    ___ _ _ _ _ ___    ___ ___ ___    ___ ___    ___ ___ ___ ___ _ _|_|___ ___
-| | | . | | |  | . | | | | |_ -|  | .'|  _| -_|  |_ -| . |  | .'|   |   | . | | | |   | . |
-|_  |___|___|  |_  |___|_  |___|  |__,|_| |___|  |___|___|  |__,|_|_|_|_|___|_  |_|_|_|_  |
-|___|          |___|   |___|                                                |___|     |___|
-</regressing>-->
 			i want to be<br>
 			s o go ddam n<br>
 			ce rul e an<br>
-			it burns if you stare too long<br>
-	    like medusa except you don't turn to stone<br>
-			you pop like a gusher<br>
+			it burns if you stare<br>
+	    too long like medusa <br>
+			except <br>
+			you don't turn to stone<br>
+			you dissolve into the bathtub<br>
+			become one with the liquid<br>
 			seafoam froths forth from<br>
 			your lips with delight<br>
 			when the sky gapes open<br>
