--- a/index.html
+++ b/index.html
@@ -364,12 +364,12 @@
 			asphyxiate me<br>
 			with rainbow chokers made of lace<br>
 			inhale<br>
-			the cherry blossom lotion in the attic<br>
 			the way it rot<br>
 			so elegantely<br>
 			like a fine wine<br>
 			or kimchi or like a moldy piece of wonderbread<br>
 			or something<br>
+			the lotion in the attic will be the last thing i remember<br>
 			trample me<br>
 			with white converse<br>
 			the big blue ball inside our brains<br>
@@ -428,9 +428,9 @@
 			fall through<br>
 			please just<br>
 			fall through<br>
-			fall through<br>
-			fall through<br>
 			why don't you just?<br>
+			fall through<br>
+			fall through<br>
 			fall through<br>
 			fall through<br>
 			fall through<br>
