i cant name every commit yass

--- a/index.html
+++ b/index.html
@@ -217,7 +217,6 @@
 			gnst<br>
 			okay?<br>
 			okay.<br>
-			<!--The cheesecake factory-->
 			what ever happened to john green?<br>
 			what ever happened to mint green?<br>
 			it wasn't just a color<br>
@@ -227,14 +226,14 @@
 			new and artificial<br>
 			some mint green<br>
 			squeeky clean<br>
-			Tiffany<br>
-			ideal <br>
+			Tiffany blue<br>
+			ideal without a clue<br>
+			of what it might do<br>
+			to us<br>
 			it's like one day they just decided to manufacture every product<br>
 			in this one color<br>
-			that of course existed before<br>
+			of course it existed before<br>
 			suddenly it was ubiquitous<br>
-			Whats up Quaranteens?!<br>
-			<!--imagine being a getty image-->
 			I've been a bad girl<br>
 			so naughty for you<br>
 			tube my esophagus is your tube<br>
@@ -248,10 +247,11 @@
 			GET THREE <br>
 			FREE deal<br>
 			I stare back in blank giddy<br>
-			<!--Try to use the words flotsum and jetsum in here-->
 			she turns and disapeers into the store<br>
 			before me lay<br>
 			a sensory exploration<br>
+			an uncharted landscape<br>
+			my manifest destiny<br>
 			the old B&BW store felt bigger<br>
 			since i would roam around there for decades<br>
 			pacing, unscrewing bottles, and sniffing their contents<br>
@@ -269,17 +269,16 @@
 			<!--This is a comment. I literally wanted to be a millenial so bad why did i want to be a millenial? so badly and to participate in the 90s kid nostalgia i had no actual memory of-->
 			oh fuck<br>
 			carnal chainsmoking<br>
+			imagine being a getty image<br>
 			its really bad isn't it?<br>
 			yeah...<br>
 			listen, babe,<br>
 			things have gotten a lot worse<br>
 			<!--This is a comment. Comments are not displayed in the browser-->
 			<!--This is a comment. Comments are not displayed in the browser-->
-			here on the squeeky clean <br>
-			listerine scene <br>
+			here on the listerine scene <br>
 			quarantine<br>
-			chewing<br>
-			<!--the collapse of sexy and cute-->
+			shut up and chew ur<br>
 			mall ratatouille<br>
 			grazing<br>
 			eos lipbalm<br>
@@ -357,14 +356,16 @@
 			the rot<br>
 			yeah we're definetely responsible<br>
 			i mean like<br>
-			what do we even say?<br>
 			who else is gonna do it<br>
+			what do we even say?<br>
 			what is there to say?<br>
-			i'm scared<br>
+			hey kids there's this big blue ball in your brains<br>
+			i don't think they'd believe us<br>
+			i think they think we're crazy<br>
 			asphyxiate me<br>
 			with rainbow chokers made of lace<br>
 			inhale<br>
-			the way it rot<br>
+			the sweet rot<br>
 			so elegantely<br>
 			like a fine wine<br>
 			or kimchi or like a moldy piece of wonderbread<br>
@@ -407,14 +408,14 @@
 			i want to dye<br>
 			it mint green <br>
 			i want to be<br>
-			s o go ddam n<br>
-			ce rul e an<br>
+			s o go d dam n<br>
+			ce ru l e an<br>
 			it burns if you stare<br>
-	    too long like medusa <br>
-			except <br>
+	    too long <br>
+			like medusa except <br>
 			you don't turn to stone<br>
-			you dissolve into the bathtub<br>
-			become one with the liquid<br>
+			you dissolve into flotsum<br>
+			become one with the jetsum<br>
 			seafoam froths forth from<br>
 			your lips with delight<br>
 			when the sky gapes open<br>
