--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel='icon' href='2014/orb.ico'>
 	<title>2014</title>
 	<link rel="stylesheet" href="style.css">
 </head>
@@ -264,12 +265,8 @@
 			are you ready to check out?<br>
 			trick question<br>
 			i'd never be<br>
-			oh wow<br>
-			oh no<br>
-			<!--This is a comment. I literally wanted to be a millenial so bad why did i want to be a millenial? so badly and to participate in the 90s kid nostalgia i had no actual memory of-->
-			oh fuck<br>
-			carnal chainsmoking<br>
 			imagine being a getty image<br>
+			imagine being a 90s kid<br>
 			its really bad isn't it?<br>
 			yeah...<br>
 			listen, babe,<br>
@@ -280,21 +277,22 @@
 			quarantine<br>
 			shut up and chew ur<br>
 			mall ratatouille<br>
-			grazing<br>
+			graze<br>
 			eos lipbalm<br>
+			across her lips<br>
 			Ebola <br>
 			happened in 2014,<br>
 			right?<br>
 			do you remember when things went viral<br>
 			before things were viral?<br>
 			when everyone knew about whatever thing it was that week<br>
-			now the cycle churns even more rapidly <br>
+			now the cycle churns more rapidly <br>
 			but inside little bubbles<br>
 			if a bath bomb explodes <br>
 			off camera<br>
 			did it even happen?<br>
 			do trees in empty forests<br>
-			fall on deaf ears<br>
+			fall on deaf ears?<br>
 			numbers don't impress me<br>
 			views don't impress me<br>
 			exposure won't impress me<br>
@@ -356,7 +354,10 @@
 			the rot<br>
 			yeah we're definetely responsible<br>
 			i mean like<br>
-			who else is gonna do it<br>
+			who else is gonna do it?<br>
+			i don't think our parents get it<br>
+			or like they wouldn't be able to communicate it in a way that's<br>
+			effective<br>
 			what do we even say?<br>
 			what is there to say?<br>
 			hey kids there's this big blue ball in your brains<br>
@@ -429,7 +430,7 @@
 			fall through<br>
 			please just<br>
 			fall through<br>
-			why don't you just?<br>
+			why don't you just<br>
 			fall through<br>
 			fall through<br>
 			fall through<br>
