--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel='icon' href='2014/orb.ico'>
+	<link rel="icon" href="orb.ico">
 	<title>2014</title>
 	<link rel="stylesheet" href="style.css">
 </head>
@@ -50,8 +50,9 @@
 			ed that by now <br>
 			we would have <br>
 			figured more of<br>
-			this stuff<br>
-			out but we really haven't it seems to have only<br>
+			this stuff out<br>
+			but we really haven't<br>
+			it seems to have only<br>
 			gotten worse<br>
 			lol<br>
 			fly me to the brilliant Azure Sky<br>
