--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="orb.ico">
+	<link rel="icon" href="2014/orb.ico">
 	<title>2014</title>
 	<link rel="stylesheet" href="style.css">
 </head>
@@ -991,11 +991,7 @@
 			fall through<br>
 			fall through<br>
 			fall through<br>
-
   		</p>
 	</center>
 </body>
-<footer>
-	<p>by k80</p>
-</footer>
 </html>
