--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="2014/orb.ico">
+	<link rel="icon" href="orb.ico">
 	<title>2014</title>
 	<link rel="stylesheet" href="style.css">
 </head>
